# catchmyvibe

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/analysis/: __init__.py  audio_analyzer.py  bpm_detector.py  embedding_generator.py  key_detector.py
backend/api/: __init__.py  config.py  database.py  main.py  schemas.py
backend/api/routes/: __init__.py  analysis.py  auth.py  import_export.py  playlists.py  sessions.py  tracks.py
backend/ingest/: __init__.py  local_scanner.py  spotify_sync.py
backend/models/: __init__.py  auth.py  base.py  playlist.py  session.py  track.py
backend/recommend/: __init__.py  engine.py
backend/storage/: __init__.py  base.py  cloud.py  google_drive.py  local.py
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/import/: page.tsx
frontend/components/: FilterPanel.tsx  SearchBar.tsx  TrackList.tsx
frontend/lib/: api.ts  types.ts
integrations/: __init__.py
integrations/rekordbox/: __init__.py  parser.py
integrations/serato/: __init__.py  reader.py
integrations/spotify/: __init__.py  client.py
integrations/tidal/: __init__.py  client.py
supabase/migrations/: 001_initial_schema.sql  002_streaming_tokens.sql
